--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
 
 	"require": {
 		"php": ">=5.3.2",
-		"composer/installers": "*"
+		"composer/installers": "*",
+		"ezyang/htmlpurifier": "v4.5.0"
 	}
 }
